--- a/mediscreennote/src/main/resources/application.properties
+++ b/mediscreennote/src/main/resources/application.properties
@@ -5,5 +5,5 @@ logging.level.org.springframework=info
 #~~~ MongoDB ~~~#
 spring.data.mongodb.database=mediscreen
 spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongo_db
 
